# otus_hw6_matrix

./: CMakeLists.txt  index.html  main.cpp  matrix.h  test.cpp
.github/workflows/: release.yml
